OPIK-3392 refactor inversion of control